# revm

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
bins/revm-test/: CHANGELOG.md  Cargo.toml
bins/revm-test/contracts/: Ballot.sol  ERC20.sol  EVM.sol  Owner.sol  Storage.sol
bins/revm-test/src/: lib.rs  xBallot.rs  xOwner.rs  xTransfer.rs
bins/revme/: CHANGELOG.md  Cargo.toml
bins/revme/src/cmd/: evmrunner.rs
bins/revme/src/cmd/statetest/: merkle_trie.rs  runner.rs
crates/bytecode/: CHANGELOG.md
crates/context/: CHANGELOG.md
crates/context/interface/: CHANGELOG.md
crates/database/: CHANGELOG.md
crates/database/interface/: CHANGELOG.md
crates/gwyneth/: Cargo.toml
crates/gwyneth/src/: context.rs  evm.rs  instructions.rs  lib.rs  precompiles.rs  xcall.rs
crates/handler/: CHANGELOG.md
crates/inspector/: CHANGELOG.md
crates/interpreter/: CHANGELOG.md  Cargo.toml
crates/interpreter/src/: gas.rs  host.rs  inner_models.rs  instruction_result.rs  interpreter.rs
crates/interpreter/src/gas/: calc.rs
crates/interpreter/src/host/: dummy.rs
crates/interpreter/src/instructions/: bitwise.rs  contract.rs  control.rs  host.rs  host_env.rs  i256.rs  macros.rs  opcode.rs  system.rs
crates/interpreter/src/interpreter/: contract.rs  serde.rs
crates/interpreter/src/interpreter_action/: call_inputs.rs  call_outcome.rs  create_inputs.rs  eof_create_inputs.rs
crates/op-revm/: CHANGELOG.md
crates/optimism/: CHANGELOG.md
crates/precompile/: CHANGELOG.md  Cargo.toml
crates/precompile/src/: blake2.rs  bn128.rs  hash.rs  kzg_point_evaluation.rs  lib.rs  modexp.rs  secp256k1.rs  xcalloptions.rs
crates/primitives/: CHANGELOG.md  Cargo.toml
crates/primitives/src/: db.rs  env.rs  kzg.rs  lib.rs  precompile.rs  result.rs  specification.rs  state.rs  taiko_specification.rs  utilities.rs
crates/primitives/src/db/: components.rs
crates/primitives/src/db/components/: block_hash.rs  state.rs
crates/primitives/src/eip7702/: authorization_list.rs
crates/primitives/src/env/: handler_cfg.rs
crates/primitives/src/kzg/: env_settings.rs  trusted_setup_points.rs
crates/revm/: CHANGELOG.md  Cargo.toml
crates/revm/benches/: bench.rs
crates/revm/src/: builder.rs  context.rs  evm.rs  frame.rs  handler.rs  inspector.rs  journaled_state.rs  lib.rs  taiko.rs
crates/revm/src/context/: context_precompiles.rs  evm_context.rs  inner_evm_context.rs
crates/revm/src/db/: emptydb.rs  ethersdb.rs  in_memory_db.rs
crates/revm/src/db/states/: bundle_state.rs  cache.rs  changes.rs  reverts.rs  state.rs  state_builder.rs  transition_account.rs  transition_state.rs
crates/revm/src/handler/: handle_types.rs  register.rs
crates/revm/src/handler/handle_types/: execution.rs  generic.rs  post_execution.rs  pre_execution.rs  validation.rs
crates/revm/src/handler/mainnet/: execution.rs  post_execution.rs  pre_execution.rs  validation.rs
crates/revm/src/inspector/: customprinter.rs  eip3155.rs  gas.rs  handler_register.rs  noop.rs
crates/revm/src/optimism/: handler_register.rs
crates/revm/src/taiko/: handler_register.rs
crates/state/: CHANGELOG.md
crates/statetest-types/: CHANGELOG.md
documentation/src/crates/: primitives.md
examples/: db_by_ref.rs  fork_ref_transact.rs  generate_block_traces.rs
